# wenyanwen-memorize

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  .env.production  .pre-commit-config.yaml  DEPLOY.md  README.md  gunicorn.conf.py  nginx.conf  pyproject.toml  systemd-service.conf
backend/data/: words.json
backend/src/wenyanwen/: __init__.py  __main__.py  config.py  database.py  main.py  models.py  schemas.py
backend/src/wenyanwen/api/v1/: quiz.py  review.py
backend/src/wenyanwen/core/: security.py
backend/src/wenyanwen/services/: spaced_repetition.py  word_loader.py
backend/tests/: conftest.py
backend/tests/test_api/: test_health.py  test_learning_flow.py  test_reset_progress.py
backend/tests/test_services/: test_quiz_generation.py  test_spaced_repetition.py
frontend/: .env.example  .prettierrc  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
frontend/src/: App.vue
frontend/src/api/: client.ts
frontend/src/components/: CardView.vue  MultipleChoiceQuestion.vue  ProgressCard.vue
frontend/src/composables/: useQuizFeedback.ts
frontend/src/router/: index.ts
frontend/src/stores/: learn.ts  progress.ts  quiz.ts  user.ts
frontend/src/types/: index.ts
frontend/src/views/: HomeView.vue  LearnView.vue  ProgressView.vue  QuizView.vue  ReviewView.vue
frontend/tests/: test-setup.ts
openspec/changes/archive/2026-02-21-ebbinghaus-day-level-quiz-system/: tasks.md
openspec/changes/archive/2026-02-21-ebbinghaus-day-level-quiz-system/specs/learning-progress-management/: spec.md
openspec/changes/archive/2026-02-21-ebbinghaus-day-level-quiz-system/specs/multi-type-quiz/: spec.md
openspec/changes/archive/2026-02-21-ebbinghaus-day-level-quiz-system/specs/word-library-expansion/: spec.md
openspec/changes/archive/2026-02-21-fix-quiz-options/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-21-fix-quiz-options/specs/learning-progress-management/: spec.md
openspec/changes/archive/2026-02-21-fix-quiz-options/specs/multi-type-quiz/: spec.md
openspec/changes/archive/2026-02-22-reset-progress-on-progress-page/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-22-reset-progress-on-progress-page/specs/reset-learning-progress/: spec.md
openspec/changes/ebbinghaus-day-level-quiz-system/: design.md  proposal.md
openspec/changes/ebbinghaus-day-level-quiz-system/specs/day-level-spaced-repetition/: spec.md
openspec/specs/reset-learning-progress/: spec.md
